--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name="foxit.ui.FileBrowserActivity"/>-->
+        <activity android:name="foxit.ui.FileBrowserActivity"/>
+        <activity
+            android:name="foxit.ui.MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|locale"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:hardwareAccelerated="false"
+            >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <action android:name="android.intent.action.VIEW"></action>
+                <data android:mimeType="application/pdf"></data>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="foxit.ui.FileSelectorActivity"
+            android:theme="@android:style/Theme.Dialog"
+            >
+        </activity>
 <!--<activity android:name="foxit.ui.MainActivity"   />-->
         <!--<activity android:name="org.apache.cordova.CordovaActivity"/>-->
 <!--<activity android:name="foxit.ui.FileSelectorActivity"/>-->
@@ -24,6 +43,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
 
     //changes
